--- a/style.css
+++ b/style.css
@@ -21,10 +21,15 @@
   background-repeat: no-repeat;
 }
 
+.header-content-wrapper {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 h1 {
   width: 315px;
   height: 110px;
-  margin: 32px 16px 32px 16px;
+  margin-top: 32px;
   font-family: Big Shoulders Display;
   font-weight: 900;
   font-size: 60px;
@@ -33,8 +38,6 @@ h1 {
 }
 
 p {
-  padding-left: 16px;
-  padding-right: 16px;
   font-family: Outfit;
   font-weight: 300;
   font-size: 18px;
@@ -75,8 +78,91 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 16px;
 }
+
+/* //middle part */
+.middle {
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-top: 120px;
+}
+
+.middle-first {
+  display: flex;
+  flex-direction: column;
+}
+
+.your_day {
+  margin-top: 25px;
+}
+
+.your_day h3 {
+  font-family: Big Shoulders Display;
+  font-weight: 900;
+  font-size: 60px;
+  line-height: 60px;
+  color: #151515;
+  padding-bottom: 32px;
+}
+
+.your_day p {
+  font-family: Outfit;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 32px;
+  color: #444444;
+  margin-bottom: 32px;
+}
+
+.middle-second {
+  display: flex;
+  margin-top: 30px;
+  flex-direction: column;
+}
+
+.middle-second-left {
+  display: flex;
+  flex-direction: column;
+  width: 343px;
+  height: 293px;
+  background-color: #151515;
+  padding-top: 48px;
+  padding-left: 24px;
+  margin-top: 16px;
+
+}
+
+.middle-black {
+  display: flex;
+  flex-direction: column;
+  height: 720px;
+  width: 445px;
+}
+
+.third-img {
+  width: 343px;
+  height: 200px;
+  margin-top: 16px;
+}
+
+
+.black-h3 {
+  font-family: Big Shoulders Display;
+  font-weight: 900;
+  font-size: 50px;
+  line-height: 45px;
+  color: #FFFFFF;
+}
+
+.black-p {
+  font-family: Outfit;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 28px;
+  color: #FFFFFF;
+  padding-top: 24px;
+}
+
 
 @media only screen and (min-width: 768px) {
   .img-wrapper {
