--- a/style.css
+++ b/style.css
@@ -87,15 +87,15 @@ h1 {
   margin-top: 120px;
 }
 
-.first-img-tablet {
-  display: none;
-}
-
-.second-img-tablet {
-  display: none;
-}
-
+.first-img-tablet,
+.second-img-tablet,
 .third-img-tablet {
+  display: none;
+}
+
+.first-img-desktop,
+.second-img-desktop,
+.third-img-desktop {
   display: none;
 }
 
@@ -223,13 +223,13 @@ h1 {
 
   /* middle part */
   .middle {
-    padding-left: 39px;
-    padding-right: 39px;
+    margin-left: 39px;
+    margin-right: 39px;
     margin-top: 120px;
   }
 
   .middle-first {
-    flex-direction: row
+    flex-direction: row;
   }
 
   .your_day {
@@ -250,27 +250,20 @@ h1 {
     margin-bottom: 32px;
   }
 
-  .first-img {
-    display: none;
-  }
-
-  .first-img-tablet {
-    display: block;
-  }
-
-  .second-img {
-    display: none;
-  }
-
-  .second-img-tablet {
-    display: block;
-    margin-right: 11px;
-  }
-
+  .first-img,
+  .second-img,
   .third-img {
     display: none;
   }
 
+  .first-img-desktop,
+  .second-img-desktop,
+  .third-img-desktop {
+    display: none;
+  }
+
+  .first-img-tablet,
+  .second-img-tablet,
   .third-img-tablet {
     display: block;
   }
@@ -294,6 +287,7 @@ h1 {
 }
 
 @media only screen and (min-width: 1440px) {
+
   .black-box {
     display: block;
   }
@@ -324,5 +318,64 @@ h1 {
   .buttons-wrapper {
     margin-left: 930px;
   }
+
+  .first-img-desktop,
+  .second-img-desktop,
+  .third-img-desktop {
+    display: block;
+  }
+
+  .first-img-tablet,
+  .second-img-tablet,
+  .third-img-tablet {
+    display: none;
+  }
+
+  .middle {
+    margin-left: 165px;
+    margin-right: 165px;
+    margin-top: 180px;
+  }
+
+  .middle-first {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .your_day {
+    margin-top: 60px;
+  }
+
+  .your_day h3 {
+    font-size: 60px;
+    line-height: 60px;
+    padding-bottom: 32px;
+  }
+
+  .middle-p {
+    width: 350px;
+    height: 128px;
+    font-size: 22px;
+    line-height: 32px;
+    margin-bottom: 60px;
+  }
+
+  .middle-second {
+    margin-top: 30px;
+  }
+
+  .middle-second-left {
+    width: 445px;
+    height: 377px;
+    padding-top: 65px;
+    padding-left: 48px;
+    margin-top: 30px;
+  }
+
+  .middle-black {
+    margin-left: 30px;
+  }
+
+
 
 }
