--- a/location.css
+++ b/location.css
@@ -1,11 +1,17 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;700&display=swap');
+
+* {
   padding: 0;
   margin: 0;
 }
-body img{
+
+body img {
   width: 100%;
 }
-a {display: flex;
+
+a {
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 208px;
@@ -13,52 +19,61 @@ a {display: flex;
   background-color: #151515;
   font-family: Big Shoulders Display;
   font-weight: 800;
-  font-size:20px;
+  font-size: 20px;
   line-height: 23.94px;
+  letter-spacing: 3.64px;
   color: white;
   border: none;
-  }
-.a :hover{
+}
+
+.tab-map,
+.desc-map {
+  display: none;
+}
+
+.a :hover {
   cursor: pointer;
 }
-  .button-2{
+
+.button-2 {
   width: 56px;
   background-color: #D5966C;
-  color:#FFFFFF;
+  color: #FFFFFF;
 }
-.button-2 img{
+
+.button-2 img {
   align-items: center;
   width: 8px;
+  transform: rotate(180deg);
 }
-.buttons{
+
+.buttons {
   position: absolute;
   display: flex;
   flex-direction: row;
-  margin-left: 156px;
 }
 
-.middle-part{
-  width: 100%;
-  display: flex;
-  height: 548px;
+
+.middle-part {
   background-color: #151515;
-  width: 100%;
-  padding-top: 104px;
+  padding: 48px 16px 56px 16px;
 }
-.middle-part h1{
-  width: 350px;
-  height: 140px;
+
+.middle-part h1 {
+  width: 343px;
+  height: 45px;
   font-family: Big Shoulders Display;
   font-weight: 900;
-  font-size: 70px;
-  line-height: 70px;
+  font-size: 50px;
+  line-height: 45px;
   color: white;
-  padding-left: 165px;
 }
-.adress{
-  margin-left: 220px;
+
+.adress {
+  margin-top: 48px;
 }
-.adress h3{
+
+.adress h3 {
   width: 350px;
   height: 36px;
   font-family: Big Shoulders Display;
@@ -67,52 +82,164 @@ a {display: flex;
   line-height: 36px;
   color: #D5966C;
 }
-.adress p{
-  width: 445px;
-  height: 96px;
-  font-family: Outfit;
-  font-weight: 300;
-  font-size: 22px;
-  line-height: 32px;
-  color: white;
-  padding-top: 24px;
-}
-.box-2{
-  color:white;
-  width: 540px;
-  height: 128px;
-  font-family: Outfit;
-  font-size: 22px;
-  font-weight: 300;
-  line-height: 32px;
-  margin-top: 32px;
-}
-footer{
-  display: none;
-  display: flex;
-  height: 244px;
-  background: #D5966C;
-  padding-left: 165px;
-  padding-top: 80px;
- }
- .footer-logo{
-   width: 159.57px;
-  height: 58px;
- }
- footer p{
-  width: 430px;
+
+.adress p {
+  width: 343px;
   height: 84px;
+  font-family: Outfit;
   font-weight: 300;
   font-size: 18px;
+  line-height: 18px;
+  color: white;
+  padding-top: 20px;
+}
+
+.box-2 {
+  color: white;
+  width: 343px;
+  height: 140px;
   font-family: Outfit;
+  font-size: 18px;
+  font-weight: 300;
   line-height: 28px;
-  padding-left: 140.43px;
+  margin-top: 20px;
+}
+
+footer {
+  background: #D5966C;
+  padding: 48px 32px;
+}
+
+.footer-logo {
+  width: 110.05px;
+  height: 40px;
+}
+
+footer p {
+  width: 311px;
+  font-weight: 300;
+  font-size: 16px;
+  font-family: Outfit;
+  line-height: 26px;
   color: #151515;
- }
-.icons{
+  margin-top: 38px;
+}
+
+.icons {
   width: 120px;
-  height: 22px;
+  height: 20px;
   display: flex;
   justify-content: space-between;
-  margin-left: 280px;
- }
+  margin-top: 38px;
+}
+
+@media only screen and (min-width: 768px) {
+
+  .mob-map {
+    display: none;
+  }
+
+  .tab-map {
+    display: block;
+  }
+
+  .buttons {
+    margin-left: 32px;
+  }
+
+  .middle-part {
+    display: flex;
+    padding: 88px 40px 80px 39px;
+  }
+
+  middle-part h1 {
+    width: 223px;
+    height: 100px;
+    font-size: 55px;
+    line-height: 50px;
+  }
+
+  .adress {
+    margin-top: 0px;
+  }
+
+  .adress h3 {
+    height: 32px;
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  .adress p {
+    width: 398px;
+    line-height: 28px;
+  }
+
+  .box-2 {
+    width: 398px;
+    height: 112px;
+    margin-top: 20px;
+  }
+
+  footer {
+    background: #D5966C;
+    padding: 56px 40px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+
+  footer p {
+    width: 281px;
+    margin-top: 0;
+  }
+
+  .icons {
+    margin-top: 0;
+  }
+
+  @media only screen and (min-width: 1440px) {
+
+    .tab-map {
+      display: none;
+    }
+
+    .desk-map {
+      display: block;
+    }
+
+    .buttons {
+      margin-left: 156px;
+    }
+
+    .middle-part {
+      display: flex;
+      padding: 104px 165px 128px 165px;
+      justify-content: space-between;
+    }
+
+    middle-part h1 {
+      width: 350px;
+      height: 140px;
+      font-size: 70px;
+      line-height: 70px;
+    }
+
+    .adress {
+      margin-top: 0px;
+    }
+
+    .adress p {
+      width: 540px;
+      line-height: 32px;
+    }
+
+    .box-2 {
+      width: 398px;
+      height: 112px;
+      margin-top: 20px;
+    }
+
+    footer {
+      padding: 80px 165px;
+    }
+  }
